--- a/src/css/main.css
+++ b/src/css/main.css
@@ -41,7 +41,7 @@ body {
 .lobby {
   display: flex;
   flex-direction: column-reverse;
-  height: 100%;
+  height: auto;
   width: 100%;
   gap: 10px;
   margin: 20px;
@@ -82,6 +82,7 @@ body {
   width: 50px;
   background-color: lightgray;
   overflow: hidden;
+  position: relative;
 }
 
 .left-door {
